<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#AED581">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:layout_margin="16dp">

  <TextView
    android:id="@+id/user_info_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
    android:text="@string/user_info"
    android:textSize="40sp"
    android:textColor="#000000"/>
  <TextView
    android:id="@+id/user_info_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="120dp"
    android:layout_marginStart="24dp"
    android:layout_marginBottom="24dp"
    android:text="@string/name"
    android:textSize="24sp"
    android:textColor="#000000"/>
  <TextView
    android:id="@+id/user_info_display_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="24dp"
    android:layout_alignParentEnd="true"
    android:layout_alignTop="@+id/user_info_name"
    android:text="@string/nameview"
    android:textSize="24sp"
    android:textColor="#000000"/>
  <TextView
    android:id="@+id/user_info_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginBottom="24dp"
    android:layout_below="@+id/user_info_name"
    android:text="@string/email"
    android:textSize="24sp"
    android:textColor="#000000"/>
    <TextView
      android:id="@+id/user_info_display_email"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignEnd="@+id/user_info_display_name"
      android:layout_alignTop="@+id/user_info_email"
      android:text="@string/emailview"
      android:textColor="#000000"
      android:textSize="24sp"/>
  <TextView
    android:id="@+id/user_info_books_read"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginBottom="24dp"
    android:layout_below="@+id/user_info_email"
    android:text="@string/books_read"
    android:textSize="24sp"
    android:textColor="#000000"/>

  </RelativeLayout>
</RelativeLayout>